alignment fixed

--- a/src/helper.css
+++ b/src/helper.css
@@ -3,6 +3,12 @@
     background-color: white;
 }
 
+/* todo : remove the h1 style */
+h1,
+h2 {
+    border: 2px solid rgba(0, 0, 0, 1);
+}
+
 .removeOverlayOnDomElement {
     z-index: 10;
     position: relative;
